--- a/calculator/src/style.css
+++ b/calculator/src/style.css
@@ -18,12 +18,12 @@ body {
   height: 35vh;
   width: 32vh;
   display:flex;
-  align-items: stretch;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
   padding: 15px;
 }
-.numbers button {
+.numbers button, .operators button {
   margin-bottom: 3px;
 }
 
@@ -32,8 +32,13 @@ body {
   padding: 10px 0;
   text-align: center;
   margin-bottom: 5px;
+  height: 15px;
+  width: 100%;
 }
 
+#clear {
+  width: 100%;
+}
 button {
   color:white;
   height: 3rem;
