--- a/tic-tac-toe/src/style.css
+++ b/tic-tac-toe/src/style.css
@@ -1,16 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 * {
   margin:0;
   padding:0;
   box-sizing: border-box;
+  font-family: Poppins,sans-serif;
+  color: white;
 }
 
+.winner {
+  opacity: 0;
+}
 body {
   height: 100vh;
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color:#040D21;
 }
 
 .container {
@@ -21,6 +29,34 @@ body {
 }
 
 .tile {
-  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 5rem;
+  min-height: 5rem;
+  border: 1px solid white;
   padding: 1rem;
+  font-size: 1.75rem;
+}
+
+.reset button{
+  color: white;
+  background-color: #238636;
+  border-style: none;
+  border-radius: 5px;
+  padding: 0.5rem 2rem;
+  font-size: 1rem;
+}
+
+.currentPlayer {
+  color: #238636;
+  font-size: 1.5rem;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+.show {
+  opacity: 1;
 }
