--- a/weather/src/style.css
+++ b/weather/src/style.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-image: url('https://source.unsplash.com/random/?landscape');
+  background-size: cover;
+}
